코드 정리 / SpotBugs 리펙토링